docs/envoy/v1.22.9/_sources/api-v3/extensions/filters/listener/original_src/v3/original_src.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/listener/original_src/v3/original_src.proto:

Original Src Filter
===================


This documentation is for the Envoy v3 API.

As of Envoy v1.18 the v2 API has been removed and is no longer supported.

If you are upgrading from v2 API config you may wish to view the v2 API documentation:

    :ref:`config/filter/listener/original_src/v2alpha1/original_src.proto <v1.17:envoy_api_file_envoy/config/filter/listener/original_src/v2alpha1/original_src.proto>`



.. _extension_envoy.filters.listener.original_src:

This extension may be referenced by the qualified name ``envoy.filters.listener.original_src``

.. note::
  This extension is functional but has not had substantial production burn time, use only with this caveat.

  This extension is intended to be robust against untrusted downstream traffic. It assumes that the upstream is trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.filters.listener <extension_category_envoy.filters.listener>`

Use the Original source address on upstream connections.

.. _envoy_v3_api_msg_extensions.filters.listener.original_src.v3.OriginalSrc:

extensions.filters.listener.original_src.v3.OriginalSrc
-------------------------------------------------------

:repo:`[extensions.filters.listener.original_src.v3.OriginalSrc proto] <api/envoy/extensions/filters/listener/original_src/v3/original_src.proto#L20>`

The Original Src filter binds upstream connections to the original source address determined
for the connection. This address could come from something like the Proxy Protocol filter, or it
could come from trusted http headers.

.. code-block:: json

  {
    "mark": "..."
  }


.. _envoy_v3_api_field_extensions.filters.listener.original_src.v3.OriginalSrc.mark:

mark
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Sets the SO_MARK option on the upstream connection's socket to the provided value. Used to
  ensure that non-local addresses may be routed back through envoy when binding to the original
  source address. The option will not be applied if the mark is 0.
  
  

